; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_signal.c_linux_rt_sigpending.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_signal.c_linux_rt_sigpending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32, i32, %struct.proc* }
%struct.proc = type { i32 }
%struct.linux_rt_sigpending_args = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_rt_sigpending(%struct.thread* %0, %struct.linux_rt_sigpending_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca %struct.linux_rt_sigpending_args*, align 8
  %6 = alloca %struct.proc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store %struct.linux_rt_sigpending_args* %1, %struct.linux_rt_sigpending_args** %5, align 8
  %9 = load %struct.thread*, %struct.thread** %4, align 8
  %10 = getelementptr inbounds %struct.thread, %struct.thread* %9, i32 0, i32 2
  %11 = load %struct.proc*, %struct.proc** %10, align 8
  store %struct.proc* %11, %struct.proc** %6, align 8
  %12 = load %struct.linux_rt_sigpending_args*, %struct.linux_rt_sigpending_args** %5, align 8
  %13 = getelementptr inbounds %struct.linux_rt_sigpending_args, %struct.linux_rt_sigpending_args* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = icmp ugt i64 %15, 4
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %3, align 4
  br label %45

19:                                               ; preds = %2
  %20 = load %struct.proc*, %struct.proc** %6, align 8
  %21 = call i32 @PROC_LOCK(%struct.proc* %20)
  %22 = load %struct.proc*, %struct.proc** %6, align 8
  %23 = getelementptr inbounds %struct.proc, %struct.proc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.thread*, %struct.thread** %4, align 8
  %27 = getelementptr inbounds %struct.thread, %struct.thread* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @SIGSETOR(i32 %25, i32 %28)
  %30 = load i32, i32* %7, align 4
  %31 = load %struct.thread*, %struct.thread** %4, align 8
  %32 = getelementptr inbounds %struct.thread, %struct.thread* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @SIGSETAND(i32 %30, i32 %33)
  %35 = load %struct.proc*, %struct.proc** %6, align 8
  %36 = call i32 @PROC_UNLOCK(%struct.proc* %35)
  %37 = call i32 @bsd_to_linux_sigset(i32* %7, i32* %8)
  %38 = load %struct.linux_rt_sigpending_args*, %struct.linux_rt_sigpending_args** %5, align 8
  %39 = getelementptr inbounds %struct.linux_rt_sigpending_args, %struct.linux_rt_sigpending_args* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.linux_rt_sigpending_args*, %struct.linux_rt_sigpending_args** %5, align 8
  %42 = getelementptr inbounds %struct.linux_rt_sigpending_args, %struct.linux_rt_sigpending_args* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @copyout(i32* %8, i32 %40, i32 %43)
  store i32 %44, i32* %3, align 4
  br label %45

45:                                               ; preds = %19, %17
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @PROC_LOCK(%struct.proc*) #1

declare dso_local i32 @SIGSETOR(i32, i32) #1

declare dso_local i32 @SIGSETAND(i32, i32) #1

declare dso_local i32 @PROC_UNLOCK(%struct.proc*) #1

declare dso_local i32 @bsd_to_linux_sigset(i32*, i32*) #1

declare dso_local i32 @copyout(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
